Fixing the sponsors list on tablet

--- a/Campsite2017-styles/style.css
+++ b/Campsite2017-styles/style.css
@@ -4062,8 +4062,8 @@ h6 + .notation {
     flex: 0 1 80%; }
     @media (min-width: 480px) {
       .amigos-list.colaboradores .amigo {
-        flex: 0 1 40%;
-        margin: 0 auto 1rem; } }
+        flex: 0 1 35%;
+        margin: 0 5% 1rem; } }
     @media (min-width: 769px) {
       .amigos-list.colaboradores .amigo {
         flex: 0 1 25%; } }
@@ -4074,8 +4074,8 @@ h6 + .notation {
       margin: 0 0 1rem; }
       @media (min-width: 480px) {
         .amigos-list.mediapartners .amigo {
-          flex: 0 1 36%;
-          margin: 0 auto 1rem; } }
+          flex: 0 1 30%;
+          margin: 0 5% 1rem; } }
       @media (min-width: 769px) {
         .amigos-list.mediapartners .amigo {
           flex: 0 1 24%;
